[package]
name = "epson"
version = "0.0.1"
edition = "2021"

[dependencies]
glam = "0.30.0"
kiddo = "5.0.3"
rayon = "1.10.0"
rand = "0.9.0"
geometric_algebra = "0.3.0"

[dev-dependencies]
piston = "1.0.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.85.0"
criterion = "0.5.1"
kiss3d = "0.35.0"

[[bench]]
name = "profiling"
harness = false
